# HyprDrive

./: .editorconfig  .gitattributes  .gitignore  Architecture.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  package-lock.json  package.json  turbo.json
.claude/: settings.local.json
.github/workflows/: bench.yml  ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: cursor_store.rs  main.rs  watcher.rs
apps/daemon/src/router/: mod.rs  mutations.rs  queries.rs
apps/daemon/tests/: pipeline_integration.rs  watcher_integration.rs
apps/tauri/: index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/src/: App.tsx  main.tsx
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx
core/: Cargo.toml
core/benches/: benchmarks.rs
core/migrations/: 001_objects.sql  002_locations.sql  003_dir_sizes.sql  004_metadata.sql  005_tags.sql  006_virtual_folders.sql  007_sync_operations.sql  008_file_types.sql  009_fts.sql  010_fid_column.sql  011_cursor_store.sql  012_hash_state.sql  013_hash_state_check.sql
core/src/: lib.rs
core/src/db/: cache.rs  mod.rs  pool.rs  queries.rs  types.rs
core/src/domain/: enums.rs  events.rs  filter.rs  id.rs  mod.rs  path.rs  security.rs  sort.rs  sync.rs  tags.rs  transfer.rs  undo.rs  virtual_folder.rs
core/src/ops/: context.rs  error.rs  mod.rs  registry.rs
core/src/ops/actions/: bulk_tag.rs  copy_file.rs  create_dir.rs  empty_trash.rs  mod.rs  move_file.rs  rename.rs  smart_rename.rs  soft_delete.rs
crates/actors/: Cargo.toml
crates/actors/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/dedup-engine/: Cargo.toml
crates/dedup-engine/benches/: dedup_benchmarks.rs
crates/dedup-engine/src/: error.rs  folder_dedup.rs  fuzzy.rs  grouping.rs  hasher.rs  lib.rs  perceptual.rs  reflink.rs  scanner.rs
crates/dedup-engine/tests/: integration.rs
crates/disk-intelligence/: Cargo.toml
crates/disk-intelligence/benches/: treemap_bench.rs
crates/disk-intelligence/src/: bubble_up.rs  lib.rs  patterns.rs  treemap.rs
crates/ffmpeg/: Cargo.toml
crates/ffmpeg/src/: lib.rs
crates/file-transfer/: Cargo.toml
crates/file-transfer/src/: lib.rs
crates/fs-indexer/: Cargo.toml
crates/fs-indexer/benches/: scan_benchmarks.rs
crates/fs-indexer/src/: error.rs  lib.rs  priority.rs  types.rs
crates/fs-indexer/src/platform/: mod.rs
crates/fs-indexer/src/platform/linux/: detect.rs  enrich.rs  listener.rs  mod.rs  scanner.rs  walk.rs
crates/fs-indexer/src/platform/macos/: mod.rs
crates/fs-indexer/src/platform/windows/: detect.rs  enrich.rs  listener.rs  mft.rs  mod.rs  pipe.rs  scanner.rs  usn.rs  util.rs
crates/images/: Cargo.toml
crates/images/src/: lib.rs
crates/ipc-protocol/: Cargo.toml
crates/ipc-protocol/src/: lib.rs
crates/media-metadata/: Cargo.toml
crates/media-metadata/src/: lib.rs
crates/object-pipeline/: Cargo.toml
crates/object-pipeline/benches/: pipeline_benchmarks.rs
crates/object-pipeline/src/: background_hasher.rs  change_processor.rs  error.rs  hasher.rs  lib.rs  pipeline.rs
crates/sdk/: Cargo.toml
crates/sdk-macros/: Cargo.toml
crates/sdk-macros/src/: lib.rs
crates/sdk/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/task-system/: Cargo.toml
crates/task-system/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
docs/: implementation-plan-v3-analysis.md  implementation-plan-v4-analysis.md
docs/architecture/: 000-template.md  001-sqlite-over-postgres.md  002-wasmtime-over-wasmer.md  003-chacha20-only.md  004-daemon-first.md  005-tiered-resource-strategy.md
helpers/hyprdrive-helper-linux/: Cargo.toml
helpers/hyprdrive-helper-linux/src/: main.rs
helpers/hyprdrive-helper-macos/: Cargo.toml
helpers/hyprdrive-helper-macos/src/: main.rs
helpers/hyprdrive-helper-windows/: Cargo.toml  install-service.ps1
helpers/hyprdrive-helper-windows/src/: main.rs  pipe_server.rs
skills/immich-textbook/: SKILL.md
skills/ralph-autonomous-loop/: SKILL.md
skills/ralph-prd-converter/: SKILL.md
skills/ralph-prd-generator/: SKILL.md
skills/spacedrive-textbook/: SKILL.md
