[workspace]
resolver = "2"
members = [
    "core",
    "crates/fs-indexer",
    "crates/disk-intelligence",
    "crates/file-transfer",
    "crates/crypto",
    "crates/search",
    "crates/ffmpeg",
    "crates/images",
    "crates/media-metadata",
    "crates/sdk",
    "crates/sdk-macros",
    "crates/task-system",
    "crates/actors",
    "crates/utils",
    "crates/dedup-engine",
    "crates/object-pipeline",
    "crates/ipc-protocol",
    "apps/daemon",
    "apps/cli",
    "helpers/hyprdrive-helper-windows",
    "helpers/hyprdrive-helper-macos",
    "helpers/hyprdrive-helper-linux",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Rap20092003/HyprDrive"
rust-version = "1.80"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Crypto
blake3 = "1"

# Dedup engine
rayon = "1"
strsim = "0.11"
memmap2 = "0.9"
image_hasher = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Cancellation
tokio-util = { version = "0.7", features = ["rt"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
redb = "2"

# Linux filesystem
nix = { version = "0.29", default-features = false, features = ["fs", "mount"] }
inotify = { version = "0.11", default-features = false }

# Cross-platform directory walking
jwalk = "0.8"

# IPC serialization
rmp-serde = "1"

# Testing utilities
tempfile = "3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
dbg_macro = "warn"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
