[package]
name = "hyprdrive-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
roaring = { version = "0.10", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
sqlx = { workspace = true }
redb = { workspace = true }
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
