[package]
name = "hyprdrive-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hyprdrive-daemon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
hyprdrive-core = { path = "../../core" }
hyprdrive-fs-indexer = { path = "../../crates/fs-indexer" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = "6"
sqlx = { workspace = true }
redb = { workspace = true }
