[package]
name = "hyprdrive-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hyprdrive-daemon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
hyprdrive-core = { path = "../../core" }
hyprdrive-fs-indexer = { path = "../../crates/fs-indexer" }
hyprdrive-object-pipeline = { path = "../../crates/object-pipeline" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = "6"
sqlx = { workspace = true }
redb = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
