[package]
name = "hyprdrive-dedup-engine"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
blake3 = { workspace = true }
rayon = { workspace = true }
strsim = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

image_hasher = { workspace = true, optional = true }
image = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["perceptual"]
perceptual = ["dep:image_hasher", "dep:image"]

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "dedup_benchmarks"
harness = false
