[package]
name = "hyprdrive-disk-intelligence"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "treemap_bench"
harness = false
