[package]
name = "hyprdrive-helper-windows"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hyprdrive-helper-windows"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
hyprdrive-ipc-protocol = { path = "../../crates/ipc-protocol" }

[target.'cfg(target_os = "windows")'.dependencies]
hyprdrive-fs-indexer = { path = "../../crates/fs-indexer" }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
] }
